--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,14 +1,5 @@
-FROM php:7.1-fpm
+FROM php:7.2-fpm
 RUN apt-get update && apt-get install -y \
-libfreetype6-dev \
-libjpeg62-turbo-dev \
-libmcrypt-dev \
-libpng12-dev \
 git \
-&& docker-php-ext-install -j$(nproc) iconv mcrypt \
-&& docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-&& docker-php-ext-install -j$(nproc) gd \
-&& docker-php-ext-install pdo pdo_mysql \
-&& docker-php-ext-install opcache 
-
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+&& pecl install xdebug-2.6.0 \
+&& docker-php-ext-enable xdebug
