--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -2,4 +2,5 @@ FROM php:7.2-fpm
 RUN apt-get update && apt-get install -y \
 git \
 && pecl install xdebug-2.6.0 \
-&& docker-php-ext-enable xdebug
+&& docker-php-ext-enable xdebug \
+&& docker-php-ext-install pdo pdo_mysql
