--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,52 @@
 server {
+    listen 80;
     index index.php index.html;
-    server_name 192.168.99.100;
+    server_name localhost;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/html/; ## <-- Your only path reference.
+    root /var/www/html/public; ## <-- Your only path reference.
+
+    location / {
+        # try to serve file directly, fallback to app.php
+        try_files $uri /index.php$is_args$args;
+    }
+
+    # DEV
+    # This rule should only be placed on your development environment
+    # In production, don't include this and don't deploy index_dev.php or config.php
+    location ~ ^/(index_dev|config)\.php(/|$) {
+        fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        # When you are using symlinks to link the document root to the
+        # current version of your application, you should pass the real
+        # application path instead of the path to the symlink to PHP
+        # FPM.
+        # Otherwise, PHP's OPcache may not properly detect changes to
+        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+        # for more information).
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+    }
+    # PROD
+    location ~ ^public/index\.php(/|$) {
+        fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+       # When you are using symlinks to link the document root to the
+       # current version of your application, you should pass the real
+       # application path instead of the path to the symlink to PHP
+       # FPM.
+       # Otherwise, PHP's OPcache may not properly detect changes to
+       # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+       # for more information).
+       fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+       fastcgi_param DOCUMENT_ROOT $realpath_root;
+       # Prevents URIs that include the front controller. This will 404:
+       # http://domain.tld/app.php/some-path
+       # Remove the internal directive to allow URIs like this
+       internal;
+   }
 
     location ~ \.php$ {
         try_files $uri =502;
