--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -3,4 +3,6 @@ RUN apt-get update && apt-get install -y \
 git \
 && pecl install xdebug-2.6.0 \
 && docker-php-ext-enable xdebug \
-&& docker-php-ext-install pdo pdo_mysql
+&& docker-php-ext-install pdo pdo_mysql \
+&& docker-php-ext-install zip \
+&& docker-php-ext-enable zip
