--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,8 +1,13 @@
-FROM php:7.2-fpm
+FROM php:7.3-fpm
 RUN apt-get update && apt-get install -y \
 git \
-&& pecl install xdebug-2.6.0 \
+&& pecl install xdebug \
 && docker-php-ext-enable xdebug \
-&& docker-php-ext-install pdo pdo_mysql \
-&& docker-php-ext-install zip \
-&& docker-php-ext-enable zip
+&& echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
+    && echo "xdebug.remote_autostart=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
+&& docker-php-ext-install pdo pdo_mysql 
+
+
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
