--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,13 +1,19 @@
 FROM php:7.3-fpm
 RUN apt-get update && apt-get install -y \
-git \
-&& pecl install xdebug \
-&& docker-php-ext-enable xdebug \
-&& echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
+    git \
+    zlib1g-dev \
+    libzip-dev \
+    sendmail \
+    libpng-dev \
+    && pecl install xdebug \
+    && docker-php-ext-enable xdebug \
+    && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
-&& docker-php-ext-install pdo pdo_mysql 
+    && docker-php-ext-install pdo pdo_mysql 
 
-
+RUN docker-php-ext-install mbstring \
+    && docker-php-ext-install zip \
+    && docker-php-ext-install gd
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
