--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,4 +1,5 @@
-FROM php:7.3-fpm
+FROM php:7.4-fpm
+
 RUN apt-get update && apt-get install -y \
     git \
     zlib1g-dev \
@@ -12,8 +13,8 @@ RUN apt-get update && apt-get install -y \
     && echo "xdebug.remote_autostart=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && docker-php-ext-install pdo pdo_mysql 
 
-RUN docker-php-ext-install mbstring \
-    && docker-php-ext-install zip \
-    && docker-php-ext-install gd
-
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+EXPOSE 9000
+EXPOSE 9009
+CMD ["php-fpm"]
