--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
       - ENVIREMENT=development
-
     links:
       - php
 
@@ -22,14 +21,11 @@ services:
       dockerfile: Dockerfile-php
     volumes:
       - ../www:/var/www/html
-    deploy:
-      resources:
-        limits:
-          cpus: '0.30'
-          memory: 100M
-        reservations:
-          cpus: '0.15'
-          memory: 40M
+      - './php-dev.ini:/usr/local/etc/php/conf.d/php-dev.ini'
+    ports:
+      - "9000:9000"
+    expose:
+      - 9009
     links:
       - db
 
