--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,4 +1,4 @@
-FROM php:7.4-fpm
+FROM php:7.3-fpm
 
 RUN apt-get update && apt-get install -y \
     git \
@@ -6,12 +6,32 @@ RUN apt-get update && apt-get install -y \
     libzip-dev \
     sendmail \
     libpng-dev \
-    && pecl install xdebug \
-    && docker-php-ext-enable xdebug \
+    libonig-dev \
+    libxml2-dev \
+    libxslt-dev \
+    libsodium-dev \
+    libwebp-dev \
+    libjpeg62-turbo-dev \
+    libpng-dev libxpm-dev \
+    libfreetype6-dev
+    
+RUN yes | pecl install xdebug
+
+RUN apt-get install -y libicu-dev \
+&& docker-php-ext-configure intl
+
+RUN docker-php-ext-enable xdebug \
     && echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && echo "xdebug.remote_autostart=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
     && docker-php-ext-install pdo pdo_mysql 
+
+RUN docker-php-ext-install mbstring zip bcmath opcache soap ctype sodium xsl intl
+
+RUN docker-php-ext-configure gd \
+      --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install gd \
+    && docker-php-ext-enable gd
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
