--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: "3.0"
+version: "3.1"
 services:
   web:
     image: nginx
     volumes:
-      - ../www:/var/www/html
+      - ../tcc-project:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./log/nginx:/var/log/nginx
     ports:
@@ -20,7 +20,7 @@ services:
       context: .
       dockerfile: Dockerfile-php
     volumes:
-      - ../www:/var/www/html
+      - ../tcc-project:/var/www/html
       - './php-dev.ini:/usr/local/etc/php/conf.d/php-dev.ini'
     ports:
       - "9000:9000"
@@ -31,17 +31,20 @@ services:
 
   db:
     image: mariadb
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-    volumes:
-      - ./db:/var/lib/mysql
-    deploy:
-      resources:
-        limits:
-          cpus: '0.30'
-          memory: 100M
-        reservations:
-          cpus: '0.15'
-          memory: 40M
-    ports:
-      - "3306:3306"
+      MARIADB_ROOT_PASSWORD: pwroot
+      MARIADB_USER: local
+      MARIADB_PASSWORD: local
+    # volumes:
+    #   - ./db:/var/lib/mysql
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '0.30'
+    #       memory: 100M
+    #     reservations:
+    #       cpus: '0.15'
+    #       memory: 40M
+    # ports:
+    #   - "3306:3306"
